--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "start": "node server.js"
+    "start": "serve dist -s -n -L -p $PORT"
   },
   "dependencies": {
     "express": "^5.2.1",
